feature: add profile and about me

--- a/index.html
+++ b/index.html
@@ -1,12 +1,53 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
+<html lang="en">
+    <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desafio 1</title>
-</head>
+    <title>Jorge Ricardo CV</title>
+
+        <link rel="stylesheet"href="style.css">
+
+    </head>
 <body>
-    <h1>Hello, World</h1>
+    <main  class="resume-contents">
+        <section class="left-section">
+            <section class="left-section-content">
+                <div class="profile">
+                    <img class="profile-image" src="img/profile-image.jpg" alt="profile image">
+                    <p class="name">Jorge Ricardo</p>>
+                    <p class="profession">Software engineer</p>
+                </div>
+                <div class="contact-info">
+                    <p class="left-title">Contato</p>
+                    <ul>
+                        <li><i class="fa fa-phone"></i>+55 11 0101-0202</li>
+                        <li><i class="fa fa-envelope"></i>jorge@gmail.com</li>
+                        <li><i class="fa fa-globe"></i>www.jorge.com</li>
+                        <li><i class="fa fa-github"></i>Jorge-jj</li>
+                    </ul>
+                </div>
+                <div class="skills">
+                    <p class="left-title">Skills</p>
+                        <ul>
+                            <li><p>HTML, CSS, GIT & GitHub</p></li>
+                            <li><p>C, C++, JavaScript</p></li>
+                        </ul>
+                </div>
+            </section>
+        </section>    
+        <section class="right-section">
+            <div class="right-section-contents">
+                    <section class="About gap">
+                        <div class="right-title">Sobre Mim</div>
+                        <p class="About-me-contents">
+                            Olá Sou o Jorge.<br>
+                            <br> o que faço
+                            <br> minha competencias
+                        </p>
+                    </section>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
