--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         </section>    
         <section class="right-section">
             <div class="right-section-contents">
-                    <section class="About gap">
+                    <section class="about gap">
                         <div class="right-title">Sobre Mim</div>
-                        <p class="About-me-contents">
+                        <p class="about-me-contents">
                             Olá Sou o Jorge.<br>
                             <br> o que faço
                             <br> minha competencias
