--- a/index.html
+++ b/index.html
@@ -47,6 +47,34 @@
                         </p>
                     </section>
             </div>
+            <section class="experience gap">
+                <div class="right-title">Experiencia</div>
+                <div class="experience-contents">
+                    <div class="exp-left">
+                        <p class="exp-company-name">Rai teque</p>
+                        <p class="exp-time-period">2021-Present</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="expe-position">Engenheiro de Software</p>
+                        <p class="exp-desc">
+                            Descreva as principais atividades da empresa 01
+                        </p>
+                    </div>
+                    <div class="exp-left">
+                        <p class="exp-company-name">Teque logui</p>
+                        <p class="exp-time-period">2019-2020</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="expe-position">Engenheiro de Software</p>
+                        <p class="exp-desc">
+                            Descreva as principais atividades da empresa 02
+                        </p>
+                    </div>
+                </div> 
+
+                </div>    
+
+            </section>
         </section>
     </main>
 </body>
