--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jorge Ricardo CV</title>
 
-        <link rel="stylesheet"href="style.css">
+    <link rel="stylesheet" href="style.css">
 
-    </head>
+</head>
+
 <body>
-    <main  class="resume-contents">
+    <main class="resume-contents">
         <section class="left-section">
             <section class="left-section-content">
                 <div class="profile">
@@ -29,25 +31,83 @@
                 </div>
                 <div class="skills">
                     <p class="left-title">Skills</p>
-                        <ul>
-                            <li><p>HTML, CSS, GIT & GitHub</p></li>
-                            <li><p>C, C++, JavaScript</p></li>
-                        </ul>
+                    <ul>
+                        <li>
+                            <p>HTML, CSS, GIT & GitHub</p>
+                        </li>
+                        <li>
+                            <p>C, C++, JavaScript</p>
+                        </li>
+                    </ul>
                 </div>
             </section>
-        </section>    
+        </section>
         <section class="right-section">
             <div class="right-section-contents">
-                    <section class="about gap">
-                        <div class="right-title">Sobre Mim</div>
-                        <p class="about-me-contents">
-                            Olá Sou o Jorge.<br>
-                            <br> o que faço
-                            <br> minha competencias
-                        </p>
-                    </section>
+                <section class="about gap">
+                    <div class="right-title">Sobre Mim</div>
+                    <p class="about-me-contents">
+                        Olá Sou o Jorge.<br>
+                        <br> o que faço
+                        <br> minha competencias
+                    </p>
+                </section>
             </div>
+            <section class="experience gap">
+                <div class="right-title">Experiencia</div>
+                <div class="experience-contents">
+                    <div class="exp-left">
+                        <p class="exp-company-name">Rai teque</p>
+                        <p class="exp-time-period">2021-Present</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="expe-position">Engenheiro de Software</p>
+                        <p class="exp-desc">
+                            Descreva as principais atividades da empresa 01
+                        </p>
+                    </div>
+                    <div class="exp-left">
+                        <p class="exp-company-name">Teque logui</p>
+                        <p class="exp-time-period">2019-2020</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="expe-position">Engenheiro de Software</p>
+                        <p class="exp-desc">
+                            Descreva as principais atividades da empresa 02
+                        </p>
+                    </div>
+                </div>
+
+                </div>
+
+            </section>
+            <section class="education-gap">
+                <div class="right-title">Formação Academica</div>
+                <div class="education-contents">
+                    <div class="education-left">
+                        <p class="education-school-name">PUC</p>
+                        <p class="education-time-period">2021/2023</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Engenharia de Software</p>
+                        <p class="education-desc">
+                            Pos graduação em enganharia de software
+                        </p>
+                    </div>
+                    <div class="education-left">
+                        <p class="education-school-name">UFPE</p>
+                        <p class="education-time-period">2015/2018</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Ciencias da Computação</p>
+                        <p class="education-desc">
+                            Pos em Inteligencia Artificial
+                        </p>
+                    </div>
+                </div>
+            </section>
         </section>
     </main>
 </body>
+
 </html>
