--- a/index.html
+++ b/index.html
@@ -76,11 +76,7 @@
                             Descreva as principais atividades da empresa 02
                         </p>
                     </div>
-<<<<<<< HEAD
                 </div>
-
-
-
             </section>
             <section class="education-gap">
                 <div class="right-title">Formação Academica</div>
@@ -106,15 +102,33 @@
                         </p>
                     </div>
                 </div>
-=======
-                </div> 
-
-                </div>    
->>>>>>> 74452caf2d3c0ab5ceb10e24237966bbc478f46d
-
+            </section>
+            <section class="awards gap">
+                <div class="right-title">Cursos</div>
+                <div class="awards-contents">
+                    <div class="awards-left">
+                        <p class="awards-company-name">EBAC</p>
+                        <p class="awards-time-period">Junho de 2018</p>
+                    </div>
+                    <div class="awards-right">
+                        <p class="awards-name">Curso de UX</p>
+                        <p class="awards-desc">
+                            Curso feito no EBAC no ano de 2018
+                        </p>
+                    </div>
+                    <div class="awards-left">
+                        <p class="awards-company-name">EBAC</p>
+                        <p class="awards-time-period">Junho de 2019</p>
+                    </div>
+                    <div class="awards-right">
+                        <p class="awards-name">Curso de Analise de Dados</p>
+                        <p class="awards-desc">
+                            Curso feito no EBAC no ano de 2019
+                        </p>
+                    </div>
+                </div>
             </section>
         </section>
     </main>
 </body>
-
 </html>
