--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jorge Ricardo CV</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="style.css">
 
@@ -26,7 +27,7 @@
                         <li><i class="fa fa-phone"></i>+55 11 0101-0202</li>
                         <li><i class="fa fa-envelope"></i>jorge@gmail.com</li>
                         <li><i class="fa fa-globe"></i>www.jorge.com</li>
-                        <li><i class="fa fa-github"></i>Jorge-jj</li>
+                        <li><i class="fab fa-github"></i>Jorge-jj</li>
                     </ul>
                 </div>
                 <div class="skills">
