--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
                             Descreva as principais atividades da empresa 02
                         </p>
                     </div>
+
+                </div>
+
+
+
+
                 </div>
             </section>
             <section class="education-gap">
@@ -127,8 +133,35 @@
                         </p>
                     </div>
                 </div>
+
+            </section>
+            <section class="education-gap">
+                <div class="right-title">Formação Academica</div>
+                <div class="education-contents">
+                    <div class="education-left">
+                        <p class="education-school-name">PUC</p>
+                        <p class="education-time-period">2021/2023</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Engenharia de Software</p>
+                        <p class="education-desc">
+                            Pos graduação em enganharia de software
+                        </p>
+                    </div>
+                    <div class="education-left">
+                        <p class="education-school-name">UFPE</p>
+                        <p class="education-time-period">2015/2018</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Ciencias da Computação</p>
+                        <p class="education-desc">
+                            Pos em Inteligencia Artificial
+                        </p>
+                    </div>
+                </div>
             </section>
         </section>
     </main>
 </body>
+
 </html>
