--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jorge Ricardo CV</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -52,114 +54,110 @@
                         <br> minha competencias
                     </p>
                 </section>
+
+                <section class="experience gap">
+                    <div class="right-title">Experiencia</div>
+                    <div class="experience-contents">
+                        <div class="exp-left">
+                            <p class="exp-company-name">Rai teque</p>
+                            <p class="exp-time-period">2021-Present</p>
+                        </div>
+                        <div class="exp-right">
+                            <p class="expe-position">Engenheiro de Software</p>
+                            <p class="exp-desc">
+                                Descreva as principais atividades da empresa 01
+                            </p>
+                        </div>
+                        <div class="exp-left">
+                            <p class="exp-company-name">Teque logui</p>
+                            <p class="exp-time-period">2019-2020</p>
+                        </div>
+                        <div class="exp-right">
+                            <p class="expe-position">Engenheiro de Software</p>
+                            <p class="exp-desc">
+                                Descreva as principais atividades da empresa 02
+                            </p>
+                        </div>
+
+                    </div>
+                </section>
+                <section class="education-gap">
+                    <div class="right-title">Formação Academica</div>
+                    <div class="education-contents">
+                        <div class="education-left">
+                            <p class="education-school-name">PUC</p>
+                            <p class="education-time-period">2021/2023</p>
+                        </div>
+                        <div class="education-right">
+                            <p class="education-subject">Engenharia de Software</p>
+                            <p class="education-desc">
+                                Pos graduação em enganharia de software
+                            </p>
+                        </div>
+                        <div class="education-left">
+                            <p class="education-school-name">UFPE</p>
+                            <p class="education-time-period">2015/2018</p>
+                        </div>
+                        <div class="education-right">
+                            <p class="education-subject">Ciencias da Computação</p>
+                            <p class="education-desc">
+                                Pos em Inteligencia Artificial
+                            </p>
+                        </div>
+                    </div>
+                </section>
+                <section class="awards gap">
+                    <div class="right-title">Cursos</div>
+                    <div class="awards-contents">
+                        <div class="awards-left">
+                            <p class="awards-company-name">EBAC</p>
+                            <p class="awards-time-period">Junho de 2018</p>
+                        </div>
+                        <div class="awards-right">
+                            <p class="awards-name">Curso de UX</p>
+                            <p class="awards-desc">
+                                Curso feito no EBAC no ano de 2018
+                            </p>
+                        </div>
+                        <div class="awards-left">
+                            <p class="awards-company-name">EBAC</p>
+                            <p class="awards-time-period">Junho de 2019</p>
+                        </div>
+                        <div class="awards-right">
+                            <p class="awards-name">Curso de Analise de Dados</p>
+                            <p class="awards-desc">
+                                Curso feito no EBAC no ano de 2019
+                            </p>
+                        </div>
+                    </div>
+
+                </section>
+                <section class="education-gap">
+                    <div class="right-title">Formação Academica</div>
+                    <div class="education-contents">
+                        <div class="education-left">
+                            <p class="education-school-name">PUC</p>
+                            <p class="education-time-period">2021/2023</p>
+                        </div>
+                        <div class="education-right">
+                            <p class="education-subject">Engenharia de Software</p>
+                            <p class="education-desc">
+                                Pos graduação em enganharia de software
+                            </p>
+                        </div>
+                        <div class="education-left">
+                            <p class="education-school-name">UFPE</p>
+                            <p class="education-time-period">2015/2018</p>
+                        </div>
+                        <div class="education-right">
+                            <p class="education-subject">Ciencias da Computação</p>
+                            <p class="education-desc">
+                                Pos em Inteligencia Artificial
+                            </p>
+                        </div>
+                    </div>
+                </section>
             </div>
-            <section class="experience gap">
-                <div class="right-title">Experiencia</div>
-                <div class="experience-contents">
-                    <div class="exp-left">
-                        <p class="exp-company-name">Rai teque</p>
-                        <p class="exp-time-period">2021-Present</p>
-                    </div>
-                    <div class="exp-right">
-                        <p class="expe-position">Engenheiro de Software</p>
-                        <p class="exp-desc">
-                            Descreva as principais atividades da empresa 01
-                        </p>
-                    </div>
-                    <div class="exp-left">
-                        <p class="exp-company-name">Teque logui</p>
-                        <p class="exp-time-period">2019-2020</p>
-                    </div>
-                    <div class="exp-right">
-                        <p class="expe-position">Engenheiro de Software</p>
-                        <p class="exp-desc">
-                            Descreva as principais atividades da empresa 02
-                        </p>
-                    </div>
-
-                </div>
-
-
-
-
-                </div>
-            </section>
-            <section class="education-gap">
-                <div class="right-title">Formação Academica</div>
-                <div class="education-contents">
-                    <div class="education-left">
-                        <p class="education-school-name">PUC</p>
-                        <p class="education-time-period">2021/2023</p>
-                    </div>
-                    <div class="education-right">
-                        <p class="education-subject">Engenharia de Software</p>
-                        <p class="education-desc">
-                            Pos graduação em enganharia de software
-                        </p>
-                    </div>
-                    <div class="education-left">
-                        <p class="education-school-name">UFPE</p>
-                        <p class="education-time-period">2015/2018</p>
-                    </div>
-                    <div class="education-right">
-                        <p class="education-subject">Ciencias da Computação</p>
-                        <p class="education-desc">
-                            Pos em Inteligencia Artificial
-                        </p>
-                    </div>
-                </div>
-            </section>
-            <section class="awards gap">
-                <div class="right-title">Cursos</div>
-                <div class="awards-contents">
-                    <div class="awards-left">
-                        <p class="awards-company-name">EBAC</p>
-                        <p class="awards-time-period">Junho de 2018</p>
-                    </div>
-                    <div class="awards-right">
-                        <p class="awards-name">Curso de UX</p>
-                        <p class="awards-desc">
-                            Curso feito no EBAC no ano de 2018
-                        </p>
-                    </div>
-                    <div class="awards-left">
-                        <p class="awards-company-name">EBAC</p>
-                        <p class="awards-time-period">Junho de 2019</p>
-                    </div>
-                    <div class="awards-right">
-                        <p class="awards-name">Curso de Analise de Dados</p>
-                        <p class="awards-desc">
-                            Curso feito no EBAC no ano de 2019
-                        </p>
-                    </div>
-                </div>
-
-            </section>
-            <section class="education-gap">
-                <div class="right-title">Formação Academica</div>
-                <div class="education-contents">
-                    <div class="education-left">
-                        <p class="education-school-name">PUC</p>
-                        <p class="education-time-period">2021/2023</p>
-                    </div>
-                    <div class="education-right">
-                        <p class="education-subject">Engenharia de Software</p>
-                        <p class="education-desc">
-                            Pos graduação em enganharia de software
-                        </p>
-                    </div>
-                    <div class="education-left">
-                        <p class="education-school-name">UFPE</p>
-                        <p class="education-time-period">2015/2018</p>
-                    </div>
-                    <div class="education-right">
-                        <p class="education-subject">Ciencias da Computação</p>
-                        <p class="education-desc">
-                            Pos em Inteligencia Artificial
-                        </p>
-                    </div>
-                </div>
-            </section>
         </section>
     </main>
 </body>
