corrigindo o erro de digitação da stack !

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="profile">
                     <img class="profile-image" src="img/profile-image.jpg" alt="profile image">
                     <p class="name">Jorge Ricardo</p>>
-                    <p class="profession">Desenvolvedor Fron-end</p>
+                    <p class="profession">Desenvolvedor Front-end</p>
                 </div>
                 <div class="contact-info">
                     <p class="left-title">Contato</p>
